objects/ERP_Pricing_Condition__c.object
<CustomObject>
    <fields>
        <fullName>Calculation_Type_Code__c</fullName>
        <label>Calculation Type Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Calculation_Type__c</fullName>
        <label>Calculation Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Calculation_Type_Code__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Percentage</fullName>
                </value>
                <value>
                    <fullName>Fixed Amount</fullName>
                </value>
                <value>
                    <fullName>Quantity</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Check_Scale_Code__c</fullName>
        <label>Check Scale Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Check_Scale__c</fullName>
        <label>Check Scale</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Check_Scale_Code__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Ascending</fullName>
                </value>
                <value>
                    <fullName>Descending</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Condition_Class_Code__c</fullName>
        <label>Condition Class Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Condition_Class__c</fullName>
        <label>Condition Class</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Condition_Class_Code__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Price</fullName>
                </value>
                <value>
                    <fullName>Discount or Surcharge</fullName>
                </value>
                <value>
                    <fullName>Surcharge</fullName>
                </value>
                <value>
                    <fullName>Freight</fullName>
                </value>
                <value>
                    <fullName>Rebate</fullName>
                </value>
                <value>
                    <fullName>Expense reimbursement</fullName>
                </value>
                <value>
                    <fullName>Discount</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Legacy_Pricing_Util_SFID__c</fullName>
        <description>This field is populated with the legacy One DuPont SF ID and was used during the split to map related records during the split and insert process to maintain the migrated record’s parent-child record relationships.</description>
        <externalId>true</externalId>
        <inlineHelpText>This is the pre-split original 18 digit Salesforce ID of this record that came from the original One Dupont Salesforce instance before the business units were separated. Its is case insensitive and unique.</inlineHelpText>
        <label>Legacy Pricing Util SFID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Novus_External_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Stores Legacy Id</description>
        <externalId>true</externalId>
        <label>Novus External Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Plus_Minus_Code__c</fullName>
        <label>Plus/Minus Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>X</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Plus_Minus__c</fullName>
        <label>Plus/Minus</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Plus_Minus_Code__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Positive</fullName>
                </value>
                <value>
                    <fullName>Negative</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Price_Types__c</fullName>
        <label>Price Types</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Floor</fullName>
                    <default>true</default>
                    <label>Floor</label>
                </value>
                <value>
                    <fullName>Net Floor</fullName>
                </value>
                <value>
                    <fullName>Net Reference</fullName>
                </value>
                <value>
                    <fullName>Project</fullName>
                </value>
                <value>
                    <fullName>Reference</fullName>
                </value>
                <value>
                    <fullName>Standard</fullName>
                </value>
                <value>
                    <fullName>Sub Total</fullName>
                </value>
                <value>
                    <fullName>Net Price</fullName>
                </value>
                <value>
                    <fullName>Pricing Task-FOC</fullName>
                </value>
                <value>
                    <fullName>Pricing Task-Spot</fullName>
                </value>
                <value>
                    <fullName>Pricing Task-Display</fullName>
                </value>
                <value>
                    <fullName>Item Terms of Payment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pricing_Condition_Code__c</fullName>
        <label>Pricing Condition Code</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pricing_Condition_Description__c</fullName>
        <label>Pricing Condition Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pricing_Condition__c</fullName>
        <label>Pricing Condition</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_Application_Id__c</fullName>
        <label>SAP Application Id</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_Client_Id__c</fullName>
        <label>SAP Client Id</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_Cluster__c</fullName>
        <label>SAP Cluster</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_Condition_Type__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SAP Condition Type</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Scale_Base__c</fullName>
        <label>Scale Base</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Scale_Basis_Code__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Quantity Scale</fullName>
                </value>
                <value>
                    <fullName>Value Scale</fullName>
                </value>
                <value>
                    <fullName>Rate Scale</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Scale_Basis_Code__c</fullName>
        <label>Scale Basis Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Scale_Type_Code__c</fullName>
        <label>Scale Type Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Scale_Type__c</fullName>
        <label>Scale Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Scale_Type_Code__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Base Scale</fullName>
                </value>
                <value>
                    <fullName>To Scale</fullName>
                </value>
                <value>
                    <fullName>From</fullName>
                </value>
                <value>
                    <fullName>To</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Security_Access__c</fullName>
        <description>Used to define the Security Access of this Pricing Condition and is used in the Sharing Setting to share to Price Approval User community</description>
        <inlineHelpText>Used to define the Security Access of this Pricing Condition and is used in the Sharing Setting to share to Price Approval User community</inlineHelpText>
        <label>Security Access</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>General</fullName>
                </value>
                <value>
                    <fullName>Restrict</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>ERP Pricing Condition</label>
    <listViews>
        <fullName>Gross_Price</fullName>
        <columns>NAME</columns>
        <columns>Condition_Class__c</columns>
        <columns>Condition_Class_Code__c</columns>
        <columns>Pricing_Condition__c</columns>
        <columns>Pricing_Condition_Code__c</columns>
        <columns>Pricing_Condition_Description__c</columns>
        <columns>Price_Types__c</columns>
        <columns>SAP_Condition_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Pricing_Condition_Description__c</field>
            <operation>contains</operation>
            <value>Surcharge</value>
        </filters>
        <label>Gross Price</label>
    </listViews>
    <listViews>
        <fullName>WP1_Pricing_Conditions</fullName>
        <columns>NAME</columns>
        <columns>Pricing_Condition_Code__c</columns>
        <columns>SAP_Cluster__c</columns>
        <columns>Condition_Class__c</columns>
        <columns>Scale_Base__c</columns>
        <columns>Calculation_Type__c</columns>
        <columns>Calculation_Type_Code__c</columns>
        <columns>Check_Scale__c</columns>
        <columns>Check_Scale_Code__c</columns>
        <columns>Condition_Class_Code__c</columns>
        <columns>Plus_Minus_Code__c</columns>
        <columns>Scale_Basis_Code__c</columns>
        <columns>Scale_Type__c</columns>
        <columns>Price_Types__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Pricing_Condition_Code__c</field>
            <operation>equals</operation>
            <value>ZA10</value>
        </filters>
        <label>WP1 Pricing Conditions</label>
    </listViews>
    <nameField>
        <displayFormat>ERP_PC-{0000}</displayFormat>
        <label>ERP Pricing Condition Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ERP Pricing Conditions</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>